// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:calendar 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <div
              class="cxd-DateControl cxd-Form-control"
            >
              <div
                class="cxd-DateCalendar cxd-ScheduleCalendar"
              >
                <div
                  class="rdt rdtStatic rdtOpen"
                >
                  <div
                    class="rdtPicker rdtPickerDate"
                  >
                    <div
                      class=""
                    >
                      <table
                        class=""
                      >
                        <thead>
                          <tr>
                            <th
                              colspan="7"
                            >
                              <div
                                class="rdtHeader"
                              >
                                <a
                                  class="rdtPrev"
                                >
                                  «
                                </a>
                                <a
                                  class="rdtPrev"
                                >
                                  ‹
                                </a>
                                <div
                                  class="rdtCenter"
                                >
                                  <a
                                    class="rdtSwitch"
                                  >
                                    2021年
                                  </a>
                                  <a
                                    class="rdtSwitch"
                                  >
                                    12月
                                  </a>
                                </div>
                                <a
                                  class="rdtNext"
                                >
                                  ›
                                </a>
                                <a
                                  class="rdtNext"
                                >
                                  »
                                </a>
                              </div>
                              <div
                                class="header-line"
                              />
                            </th>
                          </tr>
                          <tr>
                            <th
                              class="dow"
                            >
                              一
                            </th>
                            <th
                              class="dow"
                            >
                              二
                            </th>
                            <th
                              class="dow"
                            >
                              三
                            </th>
                            <th
                              class="dow"
                            >
                              四
                            </th>
                            <th
                              class="dow"
                            >
                              五
                            </th>
                            <th
                              class="dow"
                            >
                              六
                            </th>
                            <th
                              class="dow"
                            >
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rdtDay rdtOld"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtOld"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtActive"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="10"
                            >
                              <span>
                                10
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="11"
                            >
                              <span>
                                11
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-warning"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="12"
                            >
                              <span>
                                12
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="13"
                            >
                              <span>
                                13
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="14"
                            >
                              <span>
                                14
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="15"
                            >
                              <span>
                                15
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="16"
                            >
                              <span>
                                16
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="17"
                            >
                              <span>
                                17
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="18"
                            >
                              <span>
                                18
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="19"
                            >
                              <span>
                                19
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="20"
                            >
                              <span>
                                20
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="21"
                            >
                              <span>
                                21
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-danger"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="22"
                            >
                              <span>
                                22
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-danger"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="23"
                            >
                              <span>
                                23
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="24"
                            >
                              <span>
                                24
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="25"
                            >
                              <span>
                                25
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="26"
                            >
                              <span>
                                26
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="27"
                            >
                              <span>
                                27
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="28"
                            >
                              <span>
                                28
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="31"
                            >
                              <span>
                                31
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay rdtNew"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <table />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:calendar largeMode 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <div
              class="cxd-DateControl cxd-Form-control"
            >
              <div
                class="cxd-DateCalendar cxd-ScheduleCalendar cxd-ScheduleCalendar-large"
              >
                <div
                  class="rdt rdtStatic rdtOpen"
                >
                  <div
                    class="rdtPicker rdtPickerDate"
                  >
                    <div
                      class=""
                    >
                      <table
                        class=""
                      >
                        <thead>
                          <tr>
                            <th
                              colspan="7"
                            >
                              <div
                                class="rdtHeader"
                              >
                                <a
                                  class="rdtPrev"
                                >
                                  «
                                </a>
                                <a
                                  class="rdtPrev"
                                >
                                  ‹
                                </a>
                                <div
                                  class="rdtCenter"
                                >
                                  <a
                                    class="rdtSwitch"
                                  >
                                    2021年
                                  </a>
                                  <a
                                    class="rdtSwitch"
                                  >
                                    12月
                                  </a>
                                </div>
                                <a
                                  class="rdtNext"
                                >
                                  ›
                                </a>
                                <a
                                  class="rdtNext"
                                >
                                  »
                                </a>
                              </div>
                              <div
                                class="header-line"
                              />
                            </th>
                          </tr>
                          <tr>
                            <th
                              class="dow"
                            >
                              一
                            </th>
                            <th
                              class="dow"
                            >
                              二
                            </th>
                            <th
                              class="dow"
                            >
                              三
                            </th>
                            <th
                              class="dow"
                            >
                              四
                            </th>
                            <th
                              class="dow"
                            >
                              五
                            </th>
                            <th
                              class="dow"
                            >
                              六
                            </th>
                            <th
                              class="dow"
                            >
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rdtDay rdtOld"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtOld"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtActive"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="10"
                            >
                              <span>
                                10
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="11"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    11
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-warning"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程1
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="12"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    12
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-danger"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程2
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="13"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    13
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-danger"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程2
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="14"
                            >
                              <span>
                                14
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="15"
                            >
                              <span>
                                15
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="16"
                            >
                              <span>
                                16
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="17"
                            >
                              <span>
                                17
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="18"
                            >
                              <span>
                                18
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="19"
                            >
                              <span>
                                19
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="20"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    20
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-success"
                                  style="width: 200%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程3
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="21"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    21
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-transparent"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  />
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-info"
                                  style="width: 200%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程4
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="22"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    22
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-secondary"
                                  style="width: 200%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程5
                                  </div>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-transparent"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  />
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-warning"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  >
                                    这是一个日程6
                                  </div>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-footer"
                                >
                                  1
                                   
                                  more
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="23"
                            >
                              <div
                                class="cxd-ScheduleCalendar-large-day-wrap"
                              >
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-header"
                                >
                                  <span>
                                    23
                                  </span>
                                </div>
                                <div
                                  class="cxd-ScheduleCalendar-large-schedule-content bg-transparent"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="cxd-ScheduleCalendar-text-overflow"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="24"
                            >
                              <span>
                                24
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="25"
                            >
                              <span>
                                25
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="26"
                            >
                              <span>
                                26
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="27"
                            >
                              <span>
                                27
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="28"
                            >
                              <span>
                                28
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="31"
                            >
                              <span>
                                31
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay rdtNew"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <table />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:calendar scheduleAction 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <div
              class="cxd-DateControl cxd-Form-control"
            >
              <div
                class="cxd-DateCalendar cxd-ScheduleCalendar"
              >
                <div
                  class="rdt rdtStatic rdtOpen"
                >
                  <div
                    class="rdtPicker rdtPickerDate"
                  >
                    <div
                      class=""
                    >
                      <table
                        class=""
                      >
                        <thead>
                          <tr>
                            <th
                              colspan="7"
                            >
                              <div
                                class="rdtHeader"
                              >
                                <a
                                  class="rdtPrev"
                                >
                                  «
                                </a>
                                <a
                                  class="rdtPrev"
                                >
                                  ‹
                                </a>
                                <div
                                  class="rdtCenter"
                                >
                                  <a
                                    class="rdtSwitch"
                                  >
                                    2021年
                                  </a>
                                  <a
                                    class="rdtSwitch"
                                  >
                                    12月
                                  </a>
                                </div>
                                <a
                                  class="rdtNext"
                                >
                                  ›
                                </a>
                                <a
                                  class="rdtNext"
                                >
                                  »
                                </a>
                              </div>
                              <div
                                class="header-line"
                              />
                            </th>
                          </tr>
                          <tr>
                            <th
                              class="dow"
                            >
                              一
                            </th>
                            <th
                              class="dow"
                            >
                              二
                            </th>
                            <th
                              class="dow"
                            >
                              三
                            </th>
                            <th
                              class="dow"
                            >
                              四
                            </th>
                            <th
                              class="dow"
                            >
                              五
                            </th>
                            <th
                              class="dow"
                            >
                              六
                            </th>
                            <th
                              class="dow"
                            >
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rdtDay rdtOld"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtOld"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtActive"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="10"
                            >
                              <span>
                                10
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="11"
                            >
                              <span>
                                11
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-warning"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="12"
                            >
                              <span>
                                12
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="13"
                            >
                              <span>
                                13
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="14"
                            >
                              <span>
                                14
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="15"
                            >
                              <span>
                                15
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="16"
                            >
                              <span>
                                16
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="17"
                            >
                              <span>
                                17
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="18"
                            >
                              <span>
                                18
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="19"
                            >
                              <span>
                                19
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="20"
                            >
                              <span>
                                20
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="21"
                            >
                              <span>
                                21
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-danger"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="22"
                            >
                              <span>
                                22
                                <span
                                  class="cxd-ScheduleCalendar-icon bg-danger"
                                />
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="23"
                            >
                              <span>
                                23
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="24"
                            >
                              <span>
                                24
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="25"
                            >
                              <span>
                                25
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="26"
                            >
                              <span>
                                26
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay"
                              data-value="27"
                            >
                              <span>
                                27
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="28"
                            >
                              <span>
                                28
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="29"
                            >
                              <span>
                                29
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="30"
                            >
                              <span>
                                30
                              </span>
                            </td>
                            <td
                              class="rdtDay"
                              data-value="31"
                            >
                              <span>
                                31
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="1"
                            >
                              <span>
                                1
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="2"
                            >
                              <span>
                                2
                              </span>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rdtDay rdtNew"
                              data-value="3"
                            >
                              <span>
                                3
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="4"
                            >
                              <span>
                                4
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="5"
                            >
                              <span>
                                5
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="6"
                            >
                              <span>
                                6
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="7"
                            >
                              <span>
                                7
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="8"
                            >
                              <span>
                                8
                              </span>
                            </td>
                            <td
                              class="rdtDay rdtNew"
                              data-value="9"
                            >
                              <span>
                                9
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <table />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
